--- a/css/about.css
+++ b/css/about.css
@@ -52,7 +52,7 @@ table {
 
 * {
     box-sizing: border-box;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 html, body {
@@ -93,7 +93,7 @@ p {
 }
 
 .about img {
-  padding: 2%;
+  padding: 2% 0;
 }
 
 footer {
