--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,7 @@ p {
 .container header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
 }
 
 .nav {
